add code for infoAttack

--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
 
     <div id="chooseCharacters">Choose a character</div>
     <div class="charBlock" id="charBlock1">
-        <div>ChewBacca</div>
+        <div id="name">ChewBacca</div>
         <button class="button" id="char1"><img src="assets\images\ChewBacca.jpg"></button>
         <div id="healthPoints">100</div>
     </div>
     <div class="charBlock" id="charBlock2">
-        <div>Darth Vader</div>
+        <div id="name">Darth Vader</div>
         <button class="button" id="char2"><img src="assets/images/darthVader.png"></button>
         <div id="healthPoints">180</div>
     </div>
     <div class="charBlock" id="charBlock3">
-        <div>Luke Walker</div>
+        <div id="name">Luke Walker</div>
         <button class="button" id="char3"><img src="assets/images/Luke.jpg"></button>
         <div id="healthPoints">120</div>
     </div>
     <div class="charBlock" id="charBlock4">
-        <div>Yoda</div>
+        <div id="name">Yoda</div>
         <button class="button" id="char4"><img src="assets/images/Yoda.png"></button>
         <div id="healthPoints">150</div>
     </div>
@@ -59,9 +59,11 @@
     <div>Enemies Available To Attack</div>
     <div id="enemies"></div>
     <div>Fight Section</div>
-    <button>Attack</button>
+    <button id="attackBtn">Attack</button>
     <div>Defender</div>
-    <div id="defender"></div>
+    <div class="rivalArea" id="defender"></div>
+    <div id="infoAttack"></div>
+    <div id="infoCounterAttck"></div>
 
 
 
